methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:10: error: not found: value c
    marquerSol(c)
               ^FlowerPot:35: error: value Orange is not a member of object java.awt.Color
fleur(Color.Orange)
            ^